Fix moving of multiple items, and moving items backwards

To fix backward movements, all backward movements are now flipped
into forward movements (as is done in ListModel implemenation).

Movement of multiple items wasn't working as views weren't removing
the right indexes in these cases.

Task-number: QTBUG-19208
Change-Id: I9866ddabc241c066bb77329a6761d500d79aaf61
Reviewed-on: http://codereview.qt.nokia.com/2262
Reviewed-by: Bea Lam <bea.lam@nokia.com>
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>